<resources>
    <string name="app_name">Event Booking System</string>
    <string name="text_accounts">All Events</string>
    <string name="text_organiser">Organiser</string>
    <string name="text_user">User</string>
    <string name="hint_name">Name</string>
    <string name="hint_username">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="eventName">Event Name</string>
    <string name="hint_eventStatus">Event Status</string>
    <string name="hint_eventType">Event Type</string>
    <string name="hint_eventDate">Event date</string>
    <string name="hint_eventOrganizer">Event Organiser</string>
    <string name="hint_eventCommercial">Event Price</string>
    <string name="hint_venue">Venue Name</string>
    <string name="hint_eventDescription">Event Description</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_mandotary">Field can not be empty</string>
    <string name="error_user_does_not_exist">User does not exist</string>
    <string name="success_message">Registration Successful</string>
    <string name="selected_event">event selected</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello, Welcome</string>
    <string name="text_title">user title</string>
    <string name="title_activity_test">Testing Activity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_search_view">SearchViewActivity</string>

    <string name="text_city">City/Town</string>
    <string name="text_street">Street Name</string>
    <string name="text_line_1">Po Box</string>
    <string name="text_line_2">Complex number</string>
    <string name="text_line_3">Surburb/Area</string>
    <string name="text_line_4">Province</string>
    <string name="text_postal_code">Code</string>
    <string name="no_data_available">No data available</string>
    <string name="not_admin_message">Admin rights requeried</string>
    <string name="text_add_organiser">Add Organiser</string>
    <string name="text_add_facility">Add facility</string>
    <string name="text_add_venue">Add Venue</string>
    <string name="text_add_contact">Add Contacts</string>
    <string name="text_add_commercial">Add Commercial</string>
    <string name="text_add_type">Add Event Type</string>
    <string name="text_add_status">Add Event Status</string>
    <string name="text_create_event">Create Event</string>
    <string name="text_add_user">Add User</string>
    <string name="text_login_admin">Login as Admin</string>
    <string name="text_add_address">Add Address</string>
    <string name="text_description">Enter description</string>
    <string name="text_contact_number">Enter Contact number</string>
    <string name="text_event_name">Enter Event Name</string>
    <string name="text_add_event">Add Event</string>
    <string name="text_first_name">enter Firstname</string>
    <string name="text_last_name">Enter Last Name</string>
    <string name="text_email">Enter Email</string>
    <string name="text_record_added">Record successfully added</string>


</resources>
