<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="development.ngbontsi.com.activities.AdminHomeActivity">
      <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgrounds"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        >


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/admin_page" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAddUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_add_user" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_create_event" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAddStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_add_status" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAddType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_add_type" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAddCommercial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_add_commercial" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAdContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_add_contact" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAddVenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_add_venue" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAddFacility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_add_facility" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAddOrganizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_add_organiser" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</layout>