<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="development.ngbontsi.com.activities.AddAddressActivity">
    <data>
        <variable
            name="address"
            type="development.ngbontsi.com.model.Address"/>
    </data>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgrounds"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        >


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/add_icon" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_street"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:text="@{address.street}"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutLine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextLine1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_line_1"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:text="@{address.line_1}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextLine2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_line_2"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:text="@{address.line_2}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutLine3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextLine3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_line_3"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:text="@{address.line_3}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextProvince"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_line_4"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:text="@{address.line_4}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextPostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_postal_code"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:text="@{String.valueOf( address.postal_code)}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonAddAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/colorTextHint"
                android:text="@string/text_add_address" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</layout>