<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="development.ngbontsi.com.event.EventActivity">
    <data>
        <variable
            name="event"
            type="development.ngbontsi.com.model.Event"/>
    </data>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgrounds"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/eventName"
                    android:textColor="@color/colorTextHint" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewEventName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eventName"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/hint_eventStatus"
                    android:textColor="@color/colorTextHint" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewEventStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_eventStatus"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/hint_eventType"
                    android:textColor="@color/colorTextHint" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewEventType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_eventType"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/hint_eventCommercial"
                    android:textColor="@color/colorTextHint" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewEventCommercial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_eventCommercial"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/hint_eventOrganizer"
                    android:textColor="@color/colorTextHint" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewEventOrganiser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_eventOrganizer"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/hint_venue"
                    android:textColor="@color/colorTextHint" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewVenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_venue"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/hint_eventDescription"
                    android:textColor="@color/colorTextHint" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textViewEventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hint_eventDescription"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>